# chicago-tdd-tools

./: .cursorrules  .gitignore  80_20_COMPLETION_REPORT.md  80_20_FILL_GAPS_REPORT.md  80_20_GAP_ANALYSIS.md  80_20_GAP_ANALYSIS_CURRENT.md  CHANGELOG.md  CI_FIXES_SUMMARY.md  CLAUDE.md  COOKBOOK_DIATAXIS_PLAN.md  Cargo.toml  DIATAXIS_IMPROVEMENT_PLAN.md  DOCKER_DETECTION_FAILURES.md  DOCKER_HEALTH_CHECK_IMPLEMENTATION.md  EXAMPLES.md  FINAL_SUMMARY.md  FIX_PLAN_END_USER_FAILURES.md  FMEA_EXECUTIVE_SUMMARY.md  FMEA_GITHUB_ACTIONS.md  FMEA_ROOT_CAUSE_ANALYSIS.md  FMEA_SUMMARY_TABLE.md  GEMBA_DISCREPANCIES.md  GEMBA_WALK_REPORT.md  GITHUB_ACTIONS_SUMMARY.md  Justfile  KAIZEN_DOCKER_ERROR_DETECTION.md  KAIZEN_IMPROVEMENT_PLAN.md  KAIZEN_MUDA_IMPROVEMENTS.md  KAIZEN_PERFORMANCE_FALLBACK.md  LATEX_FORMALIZATION_SUMMARY.md  LATEX_REWRITE_SUMMARY.md  MDBOOK_VERIFICATION_CHECKLIST.md  MDBOOK_VERIFICATION_COMPLETE.md  MDBOOK_VERIFICATION_REPORT.md  MUDA_INVENTORY.md  MURA_INVENTORY.md  MURA_INVENTORY_EXAMPLES.md  Makefile.toml  OTEL_WEAVER_PRODUCTION_READINESS_REPORT.md  OTEL_WEAVER_TEST_ANALYSIS.md  (+35 more)
.cargo/: cov-config.toml
.config/: nextest.toml
.ggen/: sync-state.json
.github/: ANDON_SIGNALS.md  dependabot.yml
application-guide/: book.toml
benches/: builders.rs  core_fixtures.rs  testing_utilities.rs  validation.rs
cookbook/: book.toml
crates/chicago-tdd-lsp/: Cargo.toml  Makefile.toml  README.md
crates/chicago-tdd-lsp/src/: check.rs  main.rs
docs/: 80_20_COMPLETION_REPORT.md  80_20_FILL_GAPS_COMPLETION_v2.md  80_20_FILL_GAPS_REPORT.md  80_20_FILL_GAPS_v3.md  80_20_GAP_ANALYSIS.md  80_20_GAP_ANALYSIS_v2.md  ANDON.md  API_REFERENCE.md  ARCHITECTURE.md  CODE_REVIEW_CHECKLIST.md  DEVELOPMENT_WORKFLOWS.md  DOG_FOODING.md  FMEA_RELEASE_PREPARATION_RESULTS.md  FREEZING_FAILURE_MODES.md  GEMBA_WALK_RELEASE_PLAN.md  GEMBA_WALK_REPORT.md  GETTING_STARTED.md  INNOVATIVE_TESTING_TOOLS.md  KAIZEN_IMPROVEMENTS.md  KAIZEN_IMPROVEMENTS_v2.md  OCEL.md  PERFECT_WEAVER_LIVE_CHECK.md  POKA_YOKE_WEAVER_REGISTRY.md  PROBLEMS_SOLVED.md  QUICK_GUIDE.md  README.md  REGISTRY_VERSION_PINNING.md  ROOT_CAUSE_ANALYSIS_CLIPPY_WARNINGS.md  ROOT_CAUSE_ANALYSIS_CLIPPY_WARNINGS_SUMMARY.md  ROOT_CAUSE_ANALYSIS_EFFECTIVENESS.md  ROOT_CAUSE_ANALYSIS_WEAVER_REGISTRY.md  SLA_REFERENCE.md  SNAPSHOT_COVERAGE_ANALYSIS.md  SNAPSHOT_COVERAGE_IMPLEMENTATION.md  SPR_GUIDE.md  TIMEOUT_ENFORCEMENT.md  TIMEOUT_ENFORCEMENT_COMPLETE.md  UPSTREAM_ISSUE_REPORTING.md  USER_GUIDE.md  V1_1_0_DOCKER_TESTCONTAINERS_ROOT_CAUSE.md  (+10 more)
examples/: README.md  advanced_features.md  advanced_features.rs  all_phases_pipeline.rs  basic_test.md  basic_test.rs  cli_testing.md  cli_testing.rs  concurrency_testing.md  concurrency_testing.rs  fail_fast_verification.md  fail_fast_verification.rs  go_extra_mile.md  go_extra_mile.rs  hyper_advanced_microkernel.md  hyper_advanced_microkernel.rs  macro_examples.md  macro_examples.rs  mutation_testing.md  mutation_testing.rs  operator_registry.md  operator_registry.rs  otel_weaver_testing.md  otel_weaver_testing.rs  property_testing.md  property_testing.rs  rdf_validation.md  rdf_validation.rs  sector_stacks_workflows.md  sector_stacks_workflows.rs  snapshot_testing.md  snapshot_testing.rs  swarm_coordination.md  swarm_coordination.rs  testcontainers_example.md  testcontainers_example.rs
playground/: CLAP_NOUN_VERB_V3.7.1_UPDATES.md  CLI_ARCHITECTURE.md  Cargo.toml  EXTENDING_CLI.md  GH_CLI_COMMANDS.md  PROJECT_CHARTER.md  README.md
playground/docs/: DIATAXIS_GUIDE.md  README.md
playground/docs/explanation/: ARCHITECTURE.md  aaa-pattern.md  noun-verb-pattern.md  playground-philosophy.md  testing-philosophy.md
playground/docs/how-to/: INDEX.md  adding-examples.md  core-features.md  feature-flags.md  integration-features.md  json-output.md  observability-features.md  output-in-different-formats.md  testing-features.md  validation-features.md
playground/docs/reference/: COMMAND_REFERENCE.md  cli-commands.md  directory-structure.md  example-inventory.md  feature-matrix.md
playground/docs/tutorials/: GETTING_STARTED.md  copying-examples.md  getting-started.md  output-formats-intro.md  running-core-examples.md  running-feature-examples.md
playground/src/: format_utils.rs  lib.rs  main.rs
playground/src/cli/: analyze.rs  core.rs  gh.rs  improve.rs  integ.rs  metadata.rs  mod.rs  obs.rs  process.rs  quality.rs  release.rs  search.rs  system.rs  test.rs  valid.rs
playground/src/core/: alert.rs  assertions.rs  assertions_v130.rs  async_fixtures.rs  builders.rs  builders_presets.rs  const_assert.rs  fixtures.rs  macros.rs  mod.rs  state.rs  type_level.rs
playground/src/integration/: mod.rs  testcontainers.rs
playground/src/observability/: mod.rs  otel.rs  weaver.rs
playground/src/testing/: cli.rs  cli_environment.rs  concurrency.rs  generator.rs  mod.rs  mutation.rs  mutation_advanced.rs  parameterized.rs  property.rs  snapshot.rs  snapshot_redaction.rs
playground/src/validation/: coverage.rs  guards.rs  jtbd.rs  mod.rs  performance.rs
playground/tests/: cli_tests.rs  comprehensive.rs  core_tests.rs  integration_tests.rs  observability_tests.rs  testing_tests.rs  validation_tests.rs
proc_macros/: Cargo.toml  Makefile.toml
proc_macros/src/: lib.rs
scripts/: README.md  check-dog-fooding.sh  doc-coverage.sh  docs-check.sh  fix-common-lints.sh  install-git-hooks.sh  install-hooks.sh  install-timeout-check.sh  setup-docker-validation.sh  verify-prerequisites.sh  weaver-bootstrap.sh
spec-harness/: Cargo.toml  README.md  THEOREM_MAPPING.md
spec-harness/src/: chapter02.rs  chapter03.rs  chapter07.rs  lib.rs  receipt.rs
src/: assertions.rs  builders.rs  cli.rs  concurrency.rs  const_assert.rs  coverage.rs  fixture.rs  generator.rs  guards.rs  jtbd.rs  lib.rs  macros.rs  mutation.rs  operator_registry.rs  otel.rs  otel_types.rs  performance.rs  property.rs  sector_stacks.rs  snapshot.rs  testcontainers.rs  weaver.rs  weaver_types.rs
templates/: operator_registry.rs.tera
tests/: README.md  challenger_m1_2_tests.rs  common.rs  compile_fail_tests.rs  go_extra_mile_tests.rs  (+14 more)
(+409 files in other folders)
