[package]
name = "chicago-tdd-tools"
version = "1.4.0"
edition = "2021"
authors = ["KNHK Team"]
license = "MIT"
description = "Chicago TDD testing framework and tools for Rust projects"
repository = "https://github.com/seanchatmangpt/chicago-tdd-tools"
keywords = ["testing", "tdd", "chicago-tdd", "test-framework"]
categories = ["development-tools::testing"]

[dependencies]
# Async runtime
# Tokio features optimized for testing: rt (basic runtime), rt-multi-thread (parallel execution),
# macros (async test macros). Minimal feature set for testing use case.
tokio = { version = "^1.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "^0.3"

# Serialization
# Serde with derive feature for automatic serialization/deserialization of test data structures
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

# Utilities
uuid = { version = "^1.0", features = ["v4"] }
chrono = "^0.4"

# Cryptography and encoding (for sector stacks: receipts and merkle roots)
sha2 = "^0.10"
hex = "^0.4"

# Error handling
thiserror = "^2.0"

# Testcontainers support (optional, testcontainers feature)
# When to use: Integration testing with Docker containers, real service dependencies
# Enables: integration::testcontainers module, Docker container lifecycle management
# Common combo: Use with weaver for full integration testing with observability
testcontainers = { version = "^0.25", optional = true, features = ["blocking"] }

# Logging facade (optional, logging feature)
# When to use: Alert helpers integration with log crate, structured logging in tests
# Enables: AlertLogger integration with log macros (log::error!, log::warn!, etc.)
# Note: Enabled by default for better DX
log = { version = "^0.4", optional = true }

# HTTP client for Weaver admin endpoint (optional, weaver feature)
# When to use: Weaver live validation, checking Weaver admin API endpoints
# Enables: HTTP requests to Weaver admin API
# Dependency: Requires weaver feature (automatically enabled)
reqwest = { version = "^0.11", optional = true, features = ["blocking"] }

# Temporary file/directory creation (optional, weaver feature)
# When to use: Weaver test fixtures, temporary report directories
# Enables: TempDir for WeaverTestFixture
# Dependency: Requires weaver feature (automatically enabled)
tempfile = { version = "^3.0", optional = true }

# OpenTelemetry SDK for sending telemetry (optional, weaver feature)
# When to use: Sending telemetry data to Weaver, OTEL trace validation
# Enables: OTEL trace export, Weaver telemetry integration
# Dependency: Requires weaver feature (automatically enabled)
opentelemetry = { version = "^0.31", optional = true, default-features = false, features = [
  "trace",
] }
opentelemetry_sdk = { version = "^0.31", optional = true, default-features = false }
opentelemetry-otlp = { version = "^0.31", optional = true, default-features = false, features = [
  "http-proto",
  "reqwest-client",
] }

# Snapshot testing (optional, snapshot-testing feature)
# When to use: Testing complex data structures, output stability, regression testing
# Enables: testing::snapshot module, SnapshotAssert API
# Common combo: Use with property-testing for comprehensive test coverage
insta = { version = "^1.40", optional = true }

# Property-based testing (optional, property-testing feature)
# When to use: Random test generation, finding edge cases, property verification
# Enables: testing::property module, ProptestStrategy API, PropertyTestGenerator
# Common combo: Use with fake-data for realistic test data generation
proptest = { version = "^1.5", optional = true }
arbitrary = { version = "^1.4", optional = true }

# Fake data generation (optional, fake-data feature)
# When to use: Realistic test data generation, avoiding magic numbers in tests
# Enables: builders::FakeDataBuilder, fake data generation helpers
# Common combo: Use with property-testing for comprehensive test data generation
fake = { version = "^3.0", optional = true, features = ["derive"] }

# Concurrency testing (optional, concurrency-testing feature)
# When to use: Thread model checking, concurrency bug detection, deterministic testing
# Enables: testing::concurrency module, LoomModel API
# Note: Loom provides deterministic concurrency testing (exhaustive exploration)
loom = { version = "^0.7", optional = true }

# Parameterized testing (optional, parameterized-testing feature)
# When to use: Testing multiple inputs, test matrices, fixture injection
# Enables: rstest integration, parameterized test macros
# Common combo: Use with snapshot-testing for parameterized snapshot tests
rstest = { version = "^0.19", optional = true }

# CLI testing (optional, cli-testing feature)
# When to use: Testing command-line tools, golden file testing, CLI output verification
# Enables: testing::cli module, CliTest API, trycmd integration
# Note: Uses golden files (.trycmd) for CLI output comparison
trycmd = { version = "^0.15", optional = true }

# Git hooks support (optional, git-hooks feature)
# When to use: Installing Rust-based git hooks, version-controlled hooks
# Enables: git_hook_installer binary, git2 dependency for repository operations
git2 = { version = "^0.20", optional = true }

# Procedural macros (internal)
chicago-tdd-tools-proc-macros = { path = "proc_macros", version = "1.4.0" }

# OTEL types are now internal (otel_types.rs, weaver_types.rs)
# No external dependency on knhk-otel needed

[dev-dependencies]
# Test utilities (dev-only, not included in library)
tokio-test = "^0.4"      # Tokio testing utilities
ntest = "^0.9"           # Test timeout enforcement (SLA compliance)
trybuild = "^1.0"        # Compile-fail tests (compile-time test validation)
criterion = { version = "^0.7", features = ["html_reports"] }  # Performance benchmarking
tempfile = "^3.0"        # Temporary directories for tests (config module tests)
proptest = "^1.5"        # Property-based testing for invariant validation
# Note: cargo-mutants is a CLI tool, install via: cargo install cargo-mutants

[features]
# Default features: Minimal set for best DX
# logging: Alert helpers integration with log crate (enabled by default)
default = ["logging"]

# Core features (always available - no dependencies)
workflow-engine = [] # Enable workflow-specific features
mutation-testing = [] # Enable mutation testing (no external dependencies)
async = [] # Enable async performance measurement utilities (no external dependencies)
benchmarking = [] # Enable criterion benchmarking (install criterion separately for benches/)

# Individual testing features
# Property-based testing: Random test generation, finding edge cases
# When to use: Testing properties that should hold for all inputs, finding edge cases
# Enables: testing::property module, ProptestStrategy, PropertyTestGenerator
# Common combo: Use with fake-data for realistic test data
property-testing = [
  "dep:proptest",
  "dep:arbitrary",
]

# Snapshot testing: Output comparison, regression testing
# When to use: Testing complex data structures, ensuring output stability
# Enables: testing::snapshot module, SnapshotAssert API
# Common combo: Use with property-testing for comprehensive coverage
snapshot-testing = ["dep:insta"]

# Fake data generation: Realistic test data creation
# When to use: Avoiding magic numbers, generating realistic test data
# Enables: builders::FakeDataBuilder, fake data helpers
# Common combo: Use with property-testing for comprehensive test data
fake-data = ["dep:fake"]

# Concurrency testing: Thread model checking, deterministic concurrency testing
# When to use: Detecting concurrency bugs, verifying thread safety
# Enables: testing::concurrency module, LoomModel API
concurrency-testing = ["dep:loom"]

# Parameterized testing: Multiple inputs, test matrices
# When to use: Testing multiple inputs efficiently, fixture injection
# Enables: rstest integration, parameterized test macros
# Common combo: Use with snapshot-testing for parameterized snapshots
parameterized-testing = ["dep:rstest"]

# CLI testing: Command-line tool testing, golden files
# When to use: Testing CLI tools, verifying command output
# Enables: testing::cli module, CliTest API, trycmd integration
cli-testing = ["dep:trycmd"]

# Git hooks support (optional, git-hooks feature)
# When to use: Installing Rust-based git hooks, version-controlled hooks
# Enables: git_hook_installer binary, git2 dependency for repository operations
git-hooks = ["dep:git2"]

# Observability features
# OTEL validation: OpenTelemetry span/metric validation
# When to use: Validating OTEL instrumentation, span/metric verification
# Enables: observability::otel module, OTEL validation APIs
otel = []

# Weaver live validation: Weaver integration with OTEL
# When to use: Live validation of Weaver telemetry, Weaver admin API integration
# Enables: observability::weaver module, WeaverValidationResult, WeaverLiveCheck
# Dependency: Requires otel feature (automatically enabled)
weaver = [
  "otel",
  "dep:reqwest",
  "dep:opentelemetry",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-otlp",
  "dep:tempfile",
]

# Integration testing
# Testcontainers: Docker container support for integration testing
# When to use: Integration testing with real services, Docker-based testing
# Enables: integration::testcontainers module, Docker container lifecycle
# Common combo: Use with weaver for full integration testing with observability
testcontainers = ["dep:testcontainers"]

# Logging: Standard log crate integration
# When to use: Alert helpers with log macros, structured logging
# Enables: AlertLogger integration with log::error!, log::warn!, etc.
# Note: Enabled by default for better DX
logging = ["dep:log"]

# Feature groups (convenience bundles for common use cases)
# These reduce cognitive load by enabling common feature combinations with a single flag

# Testing extras: Most common advanced testing features
# Includes: property-testing, snapshot-testing, fake-data
# When to use: Comprehensive test coverage with property-based and snapshot testing
# Rationale: These three features are commonly used together for advanced testing
testing-extras = [
  "property-testing",
  "snapshot-testing",
  "fake-data",
]

# Testing full: All testing features
# Includes: property-testing, snapshot-testing, mutation-testing, concurrency-testing,
#           parameterized-testing, cli-testing, fake-data
# When to use: Maximum testing capabilities, comprehensive test suite
# Rationale: Enables all testing features for projects requiring full testing coverage
testing-full = [
  "property-testing",
  "snapshot-testing",
  "mutation-testing",
  "concurrency-testing",
  "parameterized-testing",
  "cli-testing",
  "fake-data",
]

# Observability full: Complete observability stack
# Includes: otel, weaver
# When to use: Full observability validation with Weaver integration
# Rationale: otel and weaver are commonly used together for complete observability
observability-full = [
  "otel",
  "weaver",
]

# Integration full: Full integration testing with observability
# Includes: testcontainers, weaver
# When to use: Integration testing with Docker containers and Weaver observability
# Rationale: testcontainers and weaver together provide complete integration testing
integration-full = [
  "testcontainers",
  "weaver",
]

[lib]
name = "chicago_tdd_tools"
path = "src/lib.rs"

[[bin]]
name = "weaver_smoke"
path = "src/bin/weaver_smoke.rs"
required-features = ["weaver"]

# Maximized linting configuration (Rust 1.78+)
# **Poka-Yoke Design**: Warnings are treated as errors to prevent defects at compile time.
# Type-first thinking: Compiler enforces correctness. If it compiles, invariants are enforced.
# Prevention is better than detection - catch issues at compile time, not runtime.
# Note: Individual lint configuration is done via attributes in code
# This section sets global lint levels
[lints.rust]
warnings = "deny"  # Poka-Yoke: Prevent warnings at compile time
unsafe_code = "deny"
missing_docs = "warn"  # Documentation warnings are less critical than code quality

[lints.clippy]
# **Poka-Yoke Design**: Deny warnings to prevent defects at compile time.
# Type-first thinking: Use compiler as design tool to enforce correctness.
# Prevention is better than detection - catch issues at compile time, not runtime.
# Set lint groups to deny level for poka-yoke error prevention
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

# Deny critical lints for Poka-Yoke (error prevention)
# These have higher priority (0) and will override the groups
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"

[[example]]
name = "basic_test"
path = "examples/basic_test.rs"

[[example]]
name = "property_testing"
path = "examples/property_testing.rs"

[[example]]
name = "mutation_testing"
path = "examples/mutation_testing.rs"

[[example]]
name = "macro_examples"
path = "examples/macro_examples.rs"
[[example]]
name = "testcontainers_example"
path = "examples/testcontainers_example.rs"
required-features = ["testcontainers"]
[[example]]
name = "go_extra_mile"
path = "examples/go_extra_mile.rs"
[[example]]
name = "snapshot_testing"
path = "examples/snapshot_testing.rs"
[[example]]
name = "concurrency_testing"
path = "examples/concurrency_testing.rs"
[[example]]
name = "advanced_features"
path = "examples/advanced_features.rs"

# Benchmarks
[[bench]]
name = "core_fixtures"
harness = false

[[bench]]
name = "validation"
harness = false

[[bench]]
name = "testing_utilities"
harness = false

[[bench]]
name = "builders"
harness = false
