[package]
name = "chatman-spec-harness"
version = "1.0.0"
edition = "2021"
authors = ["KNHK Team"]
license = "MIT"
description = "Spec harness for Chatman Equation - theorem-to-test mapping with spec conformance receipt generation"
repository = "https://github.com/seanchatmangpt/chicago-tdd-tools"

[lib]

[dependencies]
# Chicago TDD Tools framework
chicago-tdd-tools = { path = "..", version = "1.3.0", features = ["testing-extras"] }

# Serialization for receipt generation
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

# Hashing for merkle root generation
sha2 = "^0.10"
hex = "^0.4"

# UUID for receipt IDs
uuid = { version = "^1.0", features = ["v4"] }

# Timestamps
chrono = "^0.4"

# Git integration for commit hash tracking
git2 = { version = "^0.13", optional = true }

# Procedural macros for test generation
chicago-tdd-tools-proc-macros = { path = "../proc_macros", version = "1.3.0" }

[dev-dependencies]
tokio = { version = "^1.0", features = ["rt", "rt-multi-thread", "macros"] }

[features]
default = []
git-integration = ["git2"]

[[test]]
name = "spec_conformance"
path = "tests/spec_conformance.rs"
