[package]
name = "chatman-spec-harness"
version = "26.6.11"
edition = "2021"
authors = ["KNHK Team"]
license = "MIT"
description = "Spec harness for Chatman Equation - theorem-to-test mapping with spec conformance receipt generation"
repository = "https://github.com/seanchatmangpt/chicago-tdd-tools"
readme = "README.md"
keywords = ["testing", "tdd", "chicago-tdd", "spec-harness"]
categories = ["development-tools::testing"]

[lib]

[dependencies]
# Chicago TDD Tools framework
chicago-tdd-tools = { path = "..", version = "26.6.11", features = ["testing-extras"] }

# Serialization for receipt generation
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

# Hashing for merkle root generation
sha2 = "^0.10"
hex = "^0.4"

# UUID for receipt IDs
uuid = { version = "^1.0", features = ["v4"] }

# Timestamps
chrono = "^0.4"

# Property-based testing
proptest = "^1.5"

# Git integration for commit hash tracking
git2 = { version = "^0.20", optional = true }

# Procedural macros for test generation
chicago-tdd-tools-proc-macros = { path = "../proc_macros", version = "26.6.11" }

[dev-dependencies]
tokio = { version = "^1.0", features = ["rt", "rt-multi-thread", "macros"] }

[features]
default = []
git-integration = ["git2"]
